--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.ekazantsev.app.Main</mainClass>
+                            <mainClass>com.find.app.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
